--- a/html/contacts.html
+++ b/html/contacts.html
@@ -70,138 +70,8 @@
                         <p>Add new contact</p>
                         <img src="../assets/icons/contacts/person_add.svg" alt="add_person icon">
                     </button>
-                
-                <div class="contact-list">
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">A</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="a" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">B</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="b" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">C</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="c" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">D</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="d" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">E</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="e" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">F</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="f" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">G</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="g" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">H</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="h" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">I</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="i" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">J</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="j" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">K</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="k" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">L</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="l" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">M</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="m" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">N</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="n" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">O</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="o" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">P</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="p" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">Q</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="q" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">R</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="r" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">S</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="s" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">T</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="t" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">U</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="u" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">V</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="v" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">W</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="w" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">X</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="x" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">Y</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="y" onclick="renderContactInMain()"></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter font-size-20">Z</h2>
-                        <div class="seperator"></div>
-                        <section class="list-user" id="z" onclick="renderContactInMain()"></section>
-                    </article>
+                </div>
+                <div class="contact-list" id="contactList">
                 </div>
             </aside>
             <section class="contact-display">
