--- a/html/add_task.html
+++ b/html/add_task.html
@@ -40,8 +40,8 @@
             </nav>
         </div>
         <footer class="sidebar-footer">
-            <a href="./privacyPolicy.html">Privacy Policy</a>
-            <a href="./legalNotice.html">Legal notice</a>
+            <a href="../html/privacy_policy.html">Privacy Policy</a>
+            <a href="../html/legal_notice.html">Legal notice</a>
         </footer>
     </aside>
     <section class="action-button-section show-767">
