--- a/html/board.html
+++ b/html/board.html
@@ -39,8 +39,8 @@
             </nav>
         </div>
         <footer class="sidebar-footer">
-            <a href="../html/privacyPolicy.html">Privacy Policy</a>
-            <a href="../html/legalNotice.html">Legal notice</a>
+            <a href="../html/privacy_policy.html">Privacy Policy</a>
+            <a href="../html/legal_notice.html">Legal notice</a>
         </footer>
     </aside>
     <article class="article-bg">
