--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -49,8 +49,8 @@
             </nav>
         </div>
         <footer class="sidebar-footer">
-            <a href="../privacyPolicy.html">Privacy Policy</a>
-            <a href="../legalNotice.html">Legal notice</a>
+            <a href="../html/privacy_policy.html">Privacy Policy</a>
+            <a href="../html/legal_notice.html">Legal notice</a>
         </footer>
     </aside>
     <article>
