--- a/html/help.html
+++ b/html/help.html
@@ -68,8 +68,8 @@
             </nav>
         </header>
         <main class="contact-main">
-            <section id="contactsMainElement" class="contact-display">
-                <div>
+            <section id="contactsMainElement" class="contact-display help-content">
+                <div class="help-header">
                     <h1>Help</h1>
                     <button></button>
                 </div>
@@ -78,7 +78,7 @@
                     we'll provide an overview of what <a href="#">Join</a> is, how it can benefit you, and how to use
                     it.</p>
                 <h2>
-                    What is <a href="#">Join</a>?
+                    What is Join?
                 </h2>
                 <p><a href="#">Join</a> is a kanban-based project management tool designed and built by a group of
                     dedicated students
@@ -157,7 +157,7 @@
                         you!
                     </p>
                 </ol>
-                <h2>Enjoy using <a href="#">Join</a>!</h2>
+                <h2>Enjoy using Join!</h2>
             </section>
 
         </main>
