--- a/html/help.html
+++ b/html/help.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
     <link rel="stylesheet" href="../style/legal_privacy_help.css">
+    <link rel="stylesheet" href="../style/legal_privacy_help_responsive.css">
 
     <script src="../scripts/legal_privacy_help.js"></script>
 
@@ -66,13 +67,12 @@
                 </section>
             </nav>
         </header>
-        <main class="contact-main">
+        <main class="contact-main help-responsiv">
             <section id="contactsMainElement" class="contact-display help-content">
                 <div class="help-header">
                     <h1>Help</h1>
                     <button onclick="redirectBack()" class="go-back-btn display-in-wide"><img src="../assets/icons/contacts/go_back.svg"
                             alt="go back to source site"></button>
-                    
                 </div>
                 <p>Welcome to the help page for <a href="#">Join</a>, your guide to using our kanban project management
                     tool. Here,
@@ -158,7 +158,7 @@
                         you!
                     </p>
                 </ol>
-                <h2>Enjoy using Join!</h2>
+                <h2 class="margin-top">Enjoy using Join!</h2>
             </section>
         </main>
     </article>
