--- a/html/legal_notice.html
+++ b/html/legal_notice.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
     <link rel="stylesheet" href="../style/legal_privacy_help.css">
+    <link rel="stylesheet" href="../style/legal_privacy_help_responsive.css">
 
     <script src="../scripts/legal_privacy_help.js"></script>
 
@@ -69,97 +70,94 @@
                 </section>
             </nav>
         </header>
-        <main class="contact-main">
-            <section id="contactsMainElement" class="contact-display">
+        <main class="contact-main help-responsiv">
+            <section id="contactsMainElement" class="contact-display help-content">
                 <h1>Legal Notice</h1>
-                <article>
-                    <h2>Imprint</h2>
-                    <div>
-                        <ul>
-                            <li>
-                                [Student Names List]
-                            </li>
-                            <li>
-                                [Address of the JOIN operator - e.g. one of the students]
-                            </li>
-                            <li>
-                                [Postcode and city]
-                            </li>
-                        </ul>
-                    </div>
-                    <h2>Exploring the Board</h2>
-                    <span>Email: [Email]</span>
-                    <h2>
-                        Acceptance of terms
-                    </h2>
-                    <p>
-                        By accessing and using Join (Product), you acknowledge and agree to the following terms and
-                        conditions, and any policies, guidelines, or amendments thereto that may be presented to you
-                        from time to
-                        time. We, the listed students, may update or change the terms and conditions from time to time
-                        without
-                        notice.
-                    </p>
-                    <h2>
-                        Scope and ownership of the product
-                    </h2>
-                    <p>
-                        Join has been developed as part of a student group project in a web development bootcamp at the
-                        Developer Akademie GmbH. It has an educational purpose and is not intended for extensive
-                        personal & business usage. As such, we cannot guarantee consistent availability, reliability,
-                        accuracy, or any other aspect of quality regarding this Product. <br>
-                        The design of Join is owned by the Developer Akademie GmbH. Unauthorized use, reproduction,
-                        modification, distribution, or replication of the design is strictly prohibited.
-                    </p>
-                    <h2>
-                        Proprietary rights
-                    </h2>
-                    <p>
-                        Aside from the design owned by Developer Akademie GmbH, we, the listed students, retain all
-                        proprietary rights in Join, including any associated copyrighted material, trademarks, and other
-                        proprietary
-                        information.
-                    </p>
-                    <h2>
-                        Use of the product
-                    </h2>
-                    <p>
-                        Join is intended to be used for lawful purposes only, in accordance with all applicable laws and
-                        regulations. Any use of Join for illegal activities, or to harass, harm, threaten, or intimidate
-                        another person, is strictly prohibited. You are solely responsible for your interactions with
-                        other
-                        users of Join.
-                    </p>
-                    <h2>
-                        Disclaimer of warranties and limitation of liability
-                    </h2>
-                    <p>
-                        Join is provided "as is" without warranty of any kind, whether express or implied, including but
-                        not limited to the implied warranties of merchantability, fitness for a particular purpose, and
-                        non-infringement. In no event will we, the listed students, or the Developer Akademie, be liable
-                        for any direct, indirect, incidental, special, consequential or exemplary damages, including but
-                        not
-                        limited to, damages for loss of profits, goodwill, use, data, or other intangible losses, even
-                        if we have
-                        been advised of the possibility of such damages, arising out of or in connection with the use or
-                        performance of Join.
-                    </p>
-                    <h2>
-                        Indemnity
-                    </h2>
-                    <p>
-                        You agree to indemnify, defend and hold harmless us, the listed students, the Developer
-                        Akademie, and our affiliates, partners, officers, directors, agents, and employees, from and
-                        against any
-                        claim, demand, loss, damage, cost, or liability (including reasonable legal fees) arising out of
-                        or
-                        relating to your use of Join and/or your breach of this Legal Notice. <br>
-                        For any questions or notices, please contact us at [Contact Email]. <br>
-                        Date: July 26, 2023
-                    </p>
-                </article>
+                <h2>Imprint</h2>
+                <div>
+                    <ul>
+                        <li>
+                            Fabian Puchta, Florian Kristoffersen, Gerd Lödige, Lukas Lehmann
+                        </li>
+                        <li>
+                            Sondershauserstr. 67b
+                        </li>
+                        <li>
+                            12249, Berlin
+                        </li>
+                    </ul>
+                </div>
+                <h2>Exploring the Board</h2>
+                <span>Email: fabianpuchta@hotmail.de</span>
+                <h2>
+                    Acceptance of terms
+                </h2>
+                <p>
+                    By accessing and using <a href="#">Join</a> (Product), you acknowledge and agree to the following terms and
+                    conditions, and any policies, guidelines, or amendments thereto that may be presented to you
+                    from time to
+                    time. We, the listed students, may update or change the terms and conditions from time to time
+                    without
+                    notice.
+                </p>
+                <h2>
+                    Scope and ownership of the product
+                </h2>
+                <p>
+                    <a href="#">Join</a> has been developed as part of a student group project in a web development bootcamp at the
+                    <a href="https://developerakademie.com/?utm_term=developer%20akademie&utm_campaign=S2%20Search%20Brand%20%232&utm_source=adwords&utm_medium=ppc&hsa_acc=3199679202&hsa_cam=20207938697&hsa_grp=159989510365&hsa_ad=697748504391&hsa_src=g&hsa_tgt=kwd-1135526810540&hsa_kw=developer%20akademie&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gad_source=1&gad_campaignid=20207938697&gbraid=0AAAAADgFy8OIiPR2TrKFkXg3Sm7X8r2W0&gclid=Cj0KCQiAx8PKBhD1ARIsAKsmGbdIo0laafFORNrM8t6GFcPzJfqmROTYRU5uz1sVbbzCPx-25ZQNk8kaAkEDEALw_wcB">Developer Akademie GmbH</a>. It has an educational purpose and is not intended for extensive
+                    personal & business usage. As such, we cannot guarantee consistent availability, reliability,
+                    accuracy, or any other aspect of quality regarding this Product. <br>
+                    The design of <a href="#">Join</a> is owned by the <a href="https://developerakademie.com/?utm_term=developer%20akademie&utm_campaign=S2%20Search%20Brand%20%232&utm_source=adwords&utm_medium=ppc&hsa_acc=3199679202&hsa_cam=20207938697&hsa_grp=159989510365&hsa_ad=697748504391&hsa_src=g&hsa_tgt=kwd-1135526810540&hsa_kw=developer%20akademie&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gad_source=1&gad_campaignid=20207938697&gbraid=0AAAAADgFy8OIiPR2TrKFkXg3Sm7X8r2W0&gclid=Cj0KCQiAx8PKBhD1ARIsAKsmGbdIo0laafFORNrM8t6GFcPzJfqmROTYRU5uz1sVbbzCPx-25ZQNk8kaAkEDEALw_wcB">Developer Akademie GmbH</a>. Unauthorized use, reproduction,
+                    modification, distribution, or replication of the design is strictly prohibited.
+                </p>
+                <h2>
+                    Proprietary rights
+                </h2>
+                <p>
+                    Aside from the design owned by <a href="https://developerakademie.com/?utm_term=developer%20akademie&utm_campaign=S2%20Search%20Brand%20%232&utm_source=adwords&utm_medium=ppc&hsa_acc=3199679202&hsa_cam=20207938697&hsa_grp=159989510365&hsa_ad=697748504391&hsa_src=g&hsa_tgt=kwd-1135526810540&hsa_kw=developer%20akademie&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gad_source=1&gad_campaignid=20207938697&gbraid=0AAAAADgFy8OIiPR2TrKFkXg3Sm7X8r2W0&gclid=Cj0KCQiAx8PKBhD1ARIsAKsmGbdIo0laafFORNrM8t6GFcPzJfqmROTYRU5uz1sVbbzCPx-25ZQNk8kaAkEDEALw_wcB">Developer Akademie GmbH</a>, we, the listed students, retain all
+                    proprietary rights in <a href="#">Join</a>, including any associated copyrighted material, trademarks, and other
+                    proprietary
+                    information.
+                </p>
+                <h2>
+                    Use of the product
+                </h2>
+                <p>
+                    <a href="#">Join</a> is intended to be used for lawful purposes only, in accordance with all applicable laws and
+                    regulations. Any use of <a href="#">Join</a> for illegal activities, or to harass, harm, threaten, or intimidate
+                    another person, is strictly prohibited. You are solely responsible for your interactions with
+                    other
+                    users of <a href="#">Join</a>.
+                </p>
+                <h2>
+                    Disclaimer of warranties and limitation of liability
+                </h2>
+                <p>
+                    <a href="#">Join</a> is provided "as is" without warranty of any kind, whether express or implied, including but
+                    not limited to the implied warranties of merchantability, fitness for a particular purpose, and
+                    non-infringement. In no event will we, the listed students, or the Developer Akademie, be liable
+                    for any direct, indirect, incidental, special, consequential or exemplary damages, including but
+                    not
+                    limited to, damages for loss of profits, goodwill, use, data, or other intangible losses, even
+                    if we have
+                    been advised of the possibility of such damages, arising out of or in connection with the use or
+                    performance of <a href="#">Join</a>.
+                </p>
+                <h2>
+                    Indemnity
+                </h2>
+                <p>
+                    You agree to indemnify, defend and hold harmless us, the listed students, the Developer
+                    Akademie, and our affiliates, partners, officers, directors, agents, and employees, from and
+                    against any
+                    claim, demand, loss, damage, cost, or liability (including reasonable legal fees) arising out of
+                    or
+                    relating to your use of <a href="#">Join</a> and/or your breach of this Legal Notice. <br>
+                    For any questions or notices, please contact us at [Contact Email]. <br>
+                    Date: July 26, 2023
+                </p>
             </section>
-
         </main>
     </article>
 
