--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
     <link rel="stylesheet" href="../style/legal_privacy_help.css">
+    <link rel="stylesheet" href="../style/legal_privacy_help_responsive.css">
 
     <script src="../scripts/legal_privacy_help.js"></script>
 
@@ -67,8 +68,8 @@
                 </section>
             </nav>
         </header>
-        <main class="contact-main">
-            <section id="contactsMainElement" class="contact-display">
+        <main class="contact-main help-responsiv">
+            <section id="contactsMainElement" class="contact-display help-content">
                 <h1>Privacy Policy</h1>
                 <article>
                     <h2>Subtitle</h2>
