--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -98,7 +98,7 @@
                             zuständige Aufsichtsbehörde des Bundeslands Ihres Wohnsitzes oder an die für uns als
                             verantwortliche Stelle zuständige Behörde.</p>
                         <p>Eine Liste der Aufsichtsbehörden (für den nichtöffentlichen Bereich) mit Anschrift finden Sie
-                            unter: <a
+                            unter: <a class="break-link"
                                 href="https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html">https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html</a>.
                         </p>
                         <h2>Verarbeitungstätigkeiten</h2>
