--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             </nav>
         </div>
         <footer class="sidebar-footer">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Legal notice</a>
+            <a href="../html/privacy_policy.html">Privacy Policy</a>
+            <a href="../html/legal_notice.html">Legal notice</a>
         </footer>
     </aside>
     <article>
