--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -59,7 +59,7 @@
             <nav class="header-nav">
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
-                    <a href="../html/help.html">
+                    <a class="d-none" href="../html/help.html">
                         <img src="../assets/icons/header/help.svg" alt="help icon">
                     </a>
                     <a href="#">
