--- a/html/legal_notice.html
+++ b/html/legal_notice.html
@@ -72,7 +72,11 @@
         </header>
         <main class="contact-main help-responsiv">
             <section id="contactsMainElement" class="contact-display help-content">
-                <h1>Legal Notice</h1>
+                <div class="help-header">
+                    <h1>Legal Notice</h1>
+                    <button onclick="redirectBack()" class="go-back-btn"><img src="../assets/icons/contacts/go_back.svg"
+                            alt="go back to source site"></button>
+                </div>
                 <h2>Imprint</h2>
                 <div>
                     <ul>
