--- a/html/board.html
+++ b/html/board.html
@@ -115,7 +115,7 @@
 
     <script src="../scripts/firebase.js"></script>
     <script src="../scripts/add_task.js"></script>
-    <script src="../scripts/contact_data.js"></script>
+    <script src="../scripts/contacts/contact_data.js"></script>
     <script src="../script.js"></script>
     <script src="../scripts/add_task_templates.js"></script>
     <script src="../scripts/board_templates.js"></script>
